--- a/PIDEV_MAIN/nbproject/project.properties
+++ b/PIDEV_MAIN/nbproject/project.properties
@@ -113,7 +113,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=PIDEV_MAIN
-main.class=test.Test
+main.class=test.MainGraphic
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
