--- a/PIDEV_MAIN/nbproject/project.properties
+++ b/PIDEV_MAIN/nbproject/project.properties
@@ -33,7 +33,19 @@ dist.jar=${dist.dir}/PIDEV_MAIN.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.actlist-plugin-2.2.0.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\actlist-plugin-2.2.0.jar
+file.reference.centerdevice-nsmenufx-2.1.5.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\centerdevice-nsmenufx-2.1.5.jar
+file.reference.commonmark-0.13.1.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commonmark-0.13.1.jar
+file.reference.commons-codec-1.11.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commons-codec-1.11.jar
+file.reference.commons-daemon-1.0.10.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commons-daemon-1.0.10.jar
+file.reference.commons-io-2.4.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commons-io-2.4.jar
+file.reference.commons-lang-2.6.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commons-lang-2.6.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commons-logging-1.2.jar
+file.reference.commons-net-3.3.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commons-net-3.3.jar
 file.reference.controlsfx-8.40.11.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\controlsfx-8.40.11.jar
+file.reference.controlsfx-8.40.16.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\controlsfx-8.40.16.jar
+file.reference.error_prone_annotations-2.5.1.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\error_prone_annotations-2.5.1.jar
+file.reference.failureaccess-1.0.1.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\failureaccess-1.0.1.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\fontawesomefx-8.9.jar
 file.reference.fontawesomefx-commons-8.15.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-controls-8.15.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\fontawesomefx-controls-8.15.jar
@@ -45,6 +57,25 @@ file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar=C:\\Users\\Theto\\D
 file.reference.fontawesomefx-materialicons-2.2.0-5.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\fontawesomefx-materialicons-2.2.0-5.jar
 file.reference.fontawesomefx-octicons-4.3.0-5.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\fontawesomefx-octicons-4.3.0-5.jar
 file.reference.fontawesomefx-weathericons-2.0.10-5.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\fontawesomefx-weathericons-2.0.10-5.jar
+file.reference.google-api-client-1.23.0.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\google-api-client-1.23.0.jar\\google-api-client-1.23.0.jar
+file.reference.google-api-client-1.32.1.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\google-api-client-1.32.1.jar
+file.reference.google-api-services-gmail-v1-rev20211108-1.32.1-sources.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\google-api-services-gmail-v1-rev20211108-1.32.1-sources.jar
+file.reference.google-api-services-gmail-v1-rev20211108-1.32.1.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\google-api-services-gmail-v1-rev20211108-1.32.1.jar
+file.reference.google-collections-1.0.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\google-collections-1.0.jar
+file.reference.google-http-client-1.39.2.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\google-http-client-1.39.2.jar
+file.reference.google-http-client-apache-v2-1.39.2.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\google-http-client-apache-v2-1.39.2.jar
+file.reference.google-http-client-gson-1.39.2.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\google-http-client-gson-1.39.2.jar
+file.reference.google-oauth-client-1.31.5.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\google-oauth-client-1.31.5.jar
+file.reference.gson-2.8.6.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\gson-2.8.6.jar
+file.reference.guava-30.1.1-android.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\guava-30.1.1-android.jar
+file.reference.httpclient-4.5.12.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\httpclient-4.5.12.jar
+file.reference.httpcore-4.4.13.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\httpcore-4.4.13.jar
+file.reference.httpmime-4.5.12.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\httpmime-4.5.12.jar
+file.reference.ini4j-0.5.4.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\ini4j-0.5.4.jar
+file.reference.j2objc-annotations-1.3.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\j2objc-annotations-1.3.jar
+file.reference.jackson-annotations-2.10.3.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\jackson-annotations-2.10.3.jar
+file.reference.jackson-core-2.10.3.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\jackson-core-2.10.3.jar
+file.reference.jackson-databind-2.10.3.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\jackson-databind-2.10.3.jar
 file.reference.javafx-swt.jar=../javafx-sdk-19.0.2.1/lib/javafx-swt.jar
 file.reference.javafx.base.jar=../javafx-sdk-19.0.2.1/lib/javafx.base.jar
 file.reference.javafx.controls.jar=../javafx-sdk-19.0.2.1/lib/javafx.controls.jar
@@ -53,12 +84,33 @@ file.reference.javafx.graphics.jar=../javafx-sdk-19.0.2.1/lib/javafx.graphics.ja
 file.reference.javafx.media.jar=../javafx-sdk-19.0.2.1/lib/javafx.media.jar
 file.reference.javafx.swing.jar=../javafx-sdk-19.0.2.1/lib/javafx.swing.jar
 file.reference.javafx.web.jar=../javafx-sdk-19.0.2.1/lib/javafx.web.jar
+file.reference.javassist-3.26.0-GA.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\javassist-3.26.0-GA.jar
 file.reference.jfoenix-8.0.10.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\jfoenix-8.0.10.jar
+file.reference.jfoenix-8.0.8.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\jfoenix-8.0.8.jar
 file.reference.jfoenix-9.0.10.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\jfoenix-9.0.10.jar
+file.reference.jna-4.5.1.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\jna-4.5.1.jar
+file.reference.jna-platform-4.5.1.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\jna-platform-4.5.1.jar
+file.reference.json-20141113.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\json-20141113.jar
+file.reference.jsr305-2.0.1.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\jsr305-2.0.1.jar
+file.reference.jsr305-3.0.2.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\jsr305-3.0.2.jar
+file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar
+file.reference.logback-classic-1.2.3.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\logback-classic-1.2.3.jar
+file.reference.logback-core-1.2.3.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\logback-core-1.2.3.jar
+file.reference.maven-model-3.6.0.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\maven-model-3.6.0.jar
 file.reference.mysql-connector-j-8.0.32.jar=../mysql-connector-j-8.0.32/mysql-connector-j-8.0.32.jar
+file.reference.plexus-utils-3.1.0.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\plexus-utils-3.1.0.jar
+file.reference.protobuf-java-3.21.9.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\protobuf-java-3.21.9.jar
+file.reference.proxy-vole-1.0.3.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\proxy-vole-1.0.3.jar
+file.reference.silentsoft-core-1.4.0.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\silentsoft-core-1.4.0.jar
+file.reference.silentsoft-io-1.3.0.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\silentsoft-io-1.3.0.jar
+file.reference.silentsoft-net-1.5.0.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\silentsoft-net-1.5.0.jar
+file.reference.silentsoft-ui-1.3.0.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\silentsoft-ui-1.3.0.jar
+file.reference.slf4j-api-1.7.25.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\slf4j-api-1.7.25.jar
+file.reference.TrayNotification-5393c3a54f.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\TrayNotification-5393c3a54f.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.google-api-client-1.23.0.jar}:\
     ${file.reference.mysql-connector-j-8.0.32.jar}:\
     ${file.reference.javafx-swt.jar}:\
     ${file.reference.javafx.base.jar}:\
@@ -81,7 +133,57 @@ javac.classpath=\
     ${file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar}:\
     ${file.reference.fontawesomefx-materialicons-2.2.0-5.jar}:\
     ${file.reference.fontawesomefx-octicons-4.3.0-5.jar}:\
-    ${file.reference.fontawesomefx-weathericons-2.0.10-5.jar}
+    ${file.reference.fontawesomefx-weathericons-2.0.10-5.jar}:\
+    ${file.reference.error_prone_annotations-2.5.1.jar}:\
+    ${file.reference.failureaccess-1.0.1.jar}:\
+    ${file.reference.google-api-client-1.32.1.jar}:\
+    ${file.reference.google-api-services-gmail-v1-rev20211108-1.32.1-sources.jar}:\
+    ${file.reference.google-api-services-gmail-v1-rev20211108-1.32.1.jar}:\
+    ${file.reference.google-collections-1.0.jar}:\
+    ${file.reference.google-http-client-1.39.2.jar}:\
+    ${file.reference.google-http-client-apache-v2-1.39.2.jar}:\
+    ${file.reference.google-http-client-gson-1.39.2.jar}:\
+    ${file.reference.google-oauth-client-1.31.5.jar}:\
+    ${file.reference.gson-2.8.6.jar}:\
+    ${file.reference.guava-30.1.1-android.jar}:\
+    ${file.reference.j2objc-annotations-1.3.jar}:\
+    ${file.reference.jsr305-2.0.1.jar}:\
+    ${file.reference.jsr305-3.0.2.jar}:\
+    ${file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar}:\
+    ${file.reference.protobuf-java-3.21.9.jar}:\
+    ${file.reference.TrayNotification-5393c3a54f.jar}:\
+    ${file.reference.actlist-plugin-2.2.0.jar}:\
+    ${file.reference.centerdevice-nsmenufx-2.1.5.jar}:\
+    ${file.reference.commonmark-0.13.1.jar}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-daemon-1.0.10.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-net-3.3.jar}:\
+    ${file.reference.controlsfx-8.40.16.jar}:\
+    ${file.reference.httpclient-4.5.12.jar}:\
+    ${file.reference.httpcore-4.4.13.jar}:\
+    ${file.reference.httpmime-4.5.12.jar}:\
+    ${file.reference.ini4j-0.5.4.jar}:\
+    ${file.reference.jackson-annotations-2.10.3.jar}:\
+    ${file.reference.jackson-core-2.10.3.jar}:\
+    ${file.reference.jackson-databind-2.10.3.jar}:\
+    ${file.reference.javassist-3.26.0-GA.jar}:\
+    ${file.reference.jfoenix-8.0.8.jar}:\
+    ${file.reference.jna-4.5.1.jar}:\
+    ${file.reference.jna-platform-4.5.1.jar}:\
+    ${file.reference.json-20141113.jar}:\
+    ${file.reference.logback-classic-1.2.3.jar}:\
+    ${file.reference.logback-core-1.2.3.jar}:\
+    ${file.reference.maven-model-3.6.0.jar}:\
+    ${file.reference.plexus-utils-3.1.0.jar}:\
+    ${file.reference.proxy-vole-1.0.3.jar}:\
+    ${file.reference.silentsoft-core-1.4.0.jar}:\
+    ${file.reference.silentsoft-io-1.3.0.jar}:\
+    ${file.reference.silentsoft-net-1.5.0.jar}:\
+    ${file.reference.silentsoft-ui-1.3.0.jar}:\
+    ${file.reference.slf4j-api-1.7.25.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
