--- a/PidevDesktop/nbproject/project.properties
+++ b/PidevDesktop/nbproject/project.properties
@@ -33,11 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PidevDesktop
 excludes=
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\Mohamed\\Desktop\\notif\\controlsfx-8.40.11.jar
+file.reference.javax.mail.jar=C:\\Users\\Mohamed\\Desktop\\notif\\javax.mail.jar
 file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\Mohamed\\Desktop\\reference pidev\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.32.jar}
+    ${file.reference.mysql-connector-j-8.0.32.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
