--- a/PIDEV_MAIN/nbproject/project.properties
+++ b/PIDEV_MAIN/nbproject/project.properties
@@ -42,8 +42,7 @@ file.reference.commons-io-2.4.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNoti
 file.reference.commons-lang-2.6.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commons-lang-2.6.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commons-logging-1.2.jar
 file.reference.commons-net-3.3.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\commons-net-3.3.jar
-file.reference.controlsfx-8.40.11.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\controlsfx-8.40.11.jar
-file.reference.controlsfx-8.40.16.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\TrayNotif\\controlsfx-8.40.16.jar
+file.reference.controlsfx-11.1.2.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\ControlFXNotif\\controlsfx-11.1.2.jar
 file.reference.error_prone_annotations-2.5.1.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\error_prone_annotations-2.5.1.jar
 file.reference.failureaccess-1.0.1.jar=C:\\Users\\Theto\\Desktop\\GOOGLE APIS\\failureaccess-1.0.1.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\fontawesomefx-8.9.jar
@@ -123,7 +122,7 @@ javac.classpath=\
     ${file.reference.jfoenix-9.0.10.jar}:\
     ${file.reference.jfoenix-8.0.10.jar}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
-    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.controlsfx-11.1.2.jar}:\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
     ${file.reference.fontawesomefx-controls-8.15.jar}:\
     ${file.reference.fontawesomefx-emojione-2.2.7-2.jar}:\
@@ -161,7 +160,6 @@ javac.classpath=\
     ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.commons-net-3.3.jar}:\
-    ${file.reference.controlsfx-8.40.16.jar}:\
     ${file.reference.httpclient-4.5.12.jar}:\
     ${file.reference.httpcore-4.4.13.jar}:\
     ${file.reference.httpmime-4.5.12.jar}:\
