--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,25 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PI_Desktop_Test
 excludes=
+file.reference.checkout-sdk-2.0.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\checkout-sdk-2.0.0.jar
+file.reference.core-3.3.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\core-3.3.0.jar
+file.reference.gson-2.9.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\gson-2.9.0.jar
+file.reference.javase-3.3.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\javase-3.3.0.jar
 file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Workshop1\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 file.reference.mysql-connector-j-8.0.32.jar-1=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Workshops\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
+file.reference.paypalhttp-2.0.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\paypalhttp-2.0.0.jar
+file.reference.stripe-java-22.10.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\stripe-java-22.10.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.32.jar}:\
-    ${file.reference.mysql-connector-j-8.0.32.jar-1}
+    ${file.reference.mysql-connector-j-8.0.32.jar-1}:\
+    ${file.reference.stripe-java-22.10.0.jar}:\
+    ${file.reference.checkout-sdk-2.0.0.jar}:\
+    ${file.reference.paypalhttp-2.0.0.jar}:\
+    ${file.reference.gson-2.9.0.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.core-3.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
