--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.checkout-sdk-2.0.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\checkout-sdk-2.0.0.jar
 file.reference.core-3.3.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\core-3.3.0.jar
 file.reference.gson-2.9.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\gson-2.9.0.jar
+file.reference.itextpdf-5.5.13.3.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\itextpdf-5.5.13.3.jar
 file.reference.javase-3.3.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\javase-3.3.0.jar
 file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Workshop1\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 file.reference.mysql-connector-j-8.0.32.jar-1=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Workshops\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.paypalhttp-2.0.0.jar}:\
     ${file.reference.gson-2.9.0.jar}:\
     ${file.reference.javase-3.3.0.jar}:\
-    ${file.reference.core-3.3.0.jar}
+    ${file.reference.core-3.3.0.jar}:\
+    ${file.reference.itextpdf-5.5.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -107,5 +109,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.gson-2.9.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\gson-2.9.0.jar
 src.dir=src
 test.src.dir=test
