--- a/PidevDesk/nbproject/private/private.properties
+++ b/PidevDesk/nbproject/private/private.properties
@@ -1,8 +1,6 @@
 compile.on.save=false
-do.depend=false
-do.jar=true
 do.jlink=false
-javac.debug=true
-javadoc.preview=true
+file.reference.javax.mail-1.6.2.jar=C:\\Users\\ashre\\Downloads\\javax.mail.jar
+file.reference.twilio-9.2.4-jar-with-dependencies.jar=C:\\Users\\ashre\\Downloads\\twilio-7.55.0-jar-with-dependencies.jar
 jlink.strip=false
 user.properties.file=C:\\Users\\ashre\\AppData\\Roaming\\NetBeans\\14\\build.properties
