--- a/PidevDesk/nbproject/project.properties
+++ b/PidevDesk/nbproject/project.properties
@@ -35,15 +35,23 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PidevDesk
 endorsed.classpath=
 excludes=
-file.reference.javafx-swt.jar=C:\\Users\\openjfx-19.0.2.1_windows-x64_bin-sdk\\javafx-sdk-19.0.2.1\\lib\\javafx-swt.jar
-file.reference.javafx.base.jar=C:\\Users\\openjfx-19.0.2.1_windows-x64_bin-sdk\\javafx-sdk-19.0.2.1\\lib\\javafx.base.jar
-file.reference.javafx.controls.jar=C:\\Users\\openjfx-19.0.2.1_windows-x64_bin-sdk\\javafx-sdk-19.0.2.1\\lib\\javafx.controls.jar
-file.reference.javafx.fxml.jar=C:\\Users\\openjfx-19.0.2.1_windows-x64_bin-sdk\\javafx-sdk-19.0.2.1\\lib\\javafx.fxml.jar
-file.reference.javafx.graphics.jar=C:\\Users\\openjfx-19.0.2.1_windows-x64_bin-sdk\\javafx-sdk-19.0.2.1\\lib\\javafx.graphics.jar
-file.reference.javafx.media.jar=C:\\Users\\openjfx-19.0.2.1_windows-x64_bin-sdk\\javafx-sdk-19.0.2.1\\lib\\javafx.media.jar
-file.reference.javafx.swing.jar=C:\\Users\\openjfx-19.0.2.1_windows-x64_bin-sdk\\javafx-sdk-19.0.2.1\\lib\\javafx.swing.jar
-file.reference.javafx.web.jar=C:\\Users\\openjfx-19.0.2.1_windows-x64_bin-sdk\\javafx-sdk-19.0.2.1\\lib\\javafx.web.jar
-file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\ashre\\OneDrive\\Desktop\\touskiart\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
+file.reference.activation-1.1.1.jar=../../../Downloads/activation-1.1.1.jar
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\ashre\\Downloads\\controlsfx-8.40.11.jar
+file.reference.itextpdf-5.5.9.jar=../../../Downloads/jar_files/itextpdf-5.5.9.jar
+file.reference.itextpdf-5.5.9.jar-1=C:\\Users\\ashre\\Downloads\\itextpdf-5.5.9.jar
+file.reference.javafx-swt.jar=../../../../openjfx-19.0.2.1_windows-x64_bin-sdk/javafx-sdk-19.0.2.1/lib/javafx-swt.jar
+file.reference.javafx.base.jar=../../../../openjfx-19.0.2.1_windows-x64_bin-sdk/javafx-sdk-19.0.2.1/lib/javafx.base.jar
+file.reference.javafx.controls.jar=../../../../openjfx-19.0.2.1_windows-x64_bin-sdk/javafx-sdk-19.0.2.1/lib/javafx.controls.jar
+file.reference.javafx.fxml.jar=../../../../openjfx-19.0.2.1_windows-x64_bin-sdk/javafx-sdk-19.0.2.1/lib/javafx.fxml.jar
+file.reference.javafx.graphics.jar=../../../../openjfx-19.0.2.1_windows-x64_bin-sdk/javafx-sdk-19.0.2.1/lib/javafx.graphics.jar
+file.reference.javafx.media.jar=../../../../openjfx-19.0.2.1_windows-x64_bin-sdk/javafx-sdk-19.0.2.1/lib/javafx.media.jar
+file.reference.javafx.swing.jar=../../../../openjfx-19.0.2.1_windows-x64_bin-sdk/javafx-sdk-19.0.2.1/lib/javafx.swing.jar
+file.reference.javafx.web.jar=../../../../openjfx-19.0.2.1_windows-x64_bin-sdk/javafx-sdk-19.0.2.1/lib/javafx.web.jar
+file.reference.javax.mail-1.6.2.jar=../../../Downloads/javax.mail-1.6.2.jar
+file.reference.javax.mail.jar=C:\\Users\\ashre\\Downloads\\javax.mail.jar
+file.reference.mysql-connector-j-8.0.32.jar=../touskiart/mysql-connector-j-8.0.32/mysql-connector-j-8.0.32.jar
+file.reference.twilio-7.55.0-jar-with-dependencies.jar=../../../Downloads/twilio-7.55.0-jar-with-dependencies.jar
+file.reference.twilio-9.2.4-jar-with-dependencies.jar=../../../Downloads/twilio-9.2.4-jar-with-dependencies.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -56,7 +64,16 @@ javac.classpath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}
+    ${file.reference.javafx.web.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.twilio-9.2.4-jar-with-dependencies.jar}:\
+    ${file.reference.twilio-7.55.0-jar-with-dependencies.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
