--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/PI_Desktop_Test
 excludes=
 file.reference.checkout-sdk-2.0.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\checkout-sdk-2.0.0.jar
 file.reference.core-3.3.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\core-3.3.0.jar
+file.reference.gson-2.10.1.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\gson-2.10.1.jar
 file.reference.gson-2.9.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\gson-2.9.0.jar
 file.reference.itextpdf-5.5.13.3.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\itextpdf-5.5.13.3.jar
 file.reference.javase-3.3.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\javase-3.3.0.jar
@@ -53,7 +54,8 @@ javac.classpath=\
     ${file.reference.gson-2.9.0.jar}:\
     ${file.reference.javase-3.3.0.jar}:\
     ${file.reference.core-3.3.0.jar}:\
-    ${file.reference.itextpdf-5.5.13.3.jar}
+    ${file.reference.itextpdf-5.5.13.3.jar}:\
+    ${file.reference.gson-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
