--- a/Attempt2/nbproject/project.properties
+++ b/Attempt2/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Attempt2
+application.vendor=Theto
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,62 +33,76 @@ dist.jar=${dist.dir}/Attempt2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Attempt2
+endorsed.classpath=
 excludes=
-file.reference.checkout-sdk-2.0.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\checkout-sdk-2.0.0.jar
-file.reference.controlsfx-11.1.2.jar=jars\\controlsfx-11.1.2.jar
-file.reference.core-3.3.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\core-3.3.0.jar
-file.reference.core-3.3.0.jar-1=jars\\core-3.3.0.jar
-file.reference.fontawesomefx-8.9.jar=jars\\fontawesomefx-8.9.jar
-file.reference.fontawesomefx-commons-8.15.jar=jars\\fontawesomefx-commons-8.15.jar
-file.reference.fontawesomefx-commons-9.1.2.jar=jars\\fontawesomefx-commons-9.1.2.jar
-file.reference.fontawesomefx-controls-8.15.jar=jars\\fontawesomefx-controls-8.15.jar
-file.reference.fontawesomefx-emojione-2.2.7-2.jar=jars\\fontawesomefx-emojione-2.2.7-2.jar
-file.reference.fontawesomefx-fontawesome-4.7.0-5.jar=jars\\fontawesomefx-fontawesome-4.7.0-5.jar
-file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar=jars\\fontawesomefx-fontawesome-4.7.0-9.1.2.jar
-file.reference.fontawesomefx-glyphsbrowser-1.3.0.jar=jars\\fontawesomefx-glyphsbrowser-1.3.0.jar
-file.reference.fontawesomefx-icons525-3.0.0-4.jar=jars\\fontawesomefx-icons525-3.0.0-4.jar
-file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar=jars\\fontawesomefx-materialdesignfont-1.7.22-4.jar
-file.reference.fontawesomefx-materialicons-2.2.0-5.jar=jars\\fontawesomefx-materialicons-2.2.0-5.jar
-file.reference.fontawesomefx-octicons-4.3.0-5.jar=jars\\fontawesomefx-octicons-4.3.0-5.jar
-file.reference.fontawesomefx-weathericons-2.0.10-5.jar=jars\\fontawesomefx-weathericons-2.0.10-5.jar
-file.reference.gson-2.10.1.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\gson-2.10.1.jar
-file.reference.gson-2.10.1.jar-1=jars\\gson-2.10.1.jar
-file.reference.gson-2.9.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\gson-2.9.0.jar
-file.reference.itextpdf-5.5.13.3.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\itextpdf-5.5.13.3.jar
-file.reference.itextpdf-5.5.13.3.jar-1=jars\\itextpdf-5.5.13.3.jar
-file.reference.javafx-swt.jar=jars\\javafx-swt.jar
-file.reference.javafx.base.jar=jars\\javafx.base.jar
-file.reference.javafx.controls.jar=jars\\javafx.controls.jar
-file.reference.javafx.fxml.jar=jars\\javafx.fxml.jar
-file.reference.javafx.graphics.jar=jars\\javafx.graphics.jar
-file.reference.javafx.media.jar=jars\\javafx.media.jar
-file.reference.javafx.swing.jar=jars\\javafx.swing.jar
-file.reference.javafx.web.jar=jars\\javafx.web.jar
-file.reference.javase-3.3.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\javase-3.3.0.jar
-file.reference.javase-3.3.0.jar-1=jars\\javase-3.3.0.jar
-file.reference.javax.mail.jar=jars\\javax.mail.jar
-file.reference.jfoenix-8.0.10.jar=jars\\jfoenix-8.0.10.jar
-file.reference.jfoenix-9.0.10.jar=jars\\jfoenix-9.0.10.jar
-file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Workshop1\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
-file.reference.mysql-connector-j-8.0.32.jar-1=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Workshops\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
-file.reference.mysql-connector-j-8.0.32.jar-2=jars\\mysql-connector-j-8.0.32.jar
-file.reference.paypalhttp-2.0.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\jar_files\\paypalhttp-2.0.0.jar
-file.reference.stripe-java-22.10.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\stripe-java-22.10.0.jar
-file.reference.stripe-java-22.10.0.jar-1=jars\\stripe-java-22.10.0.jar
+file.reference.controlsfx-11.1.2.jar=jars/controlsfx-11.1.2.jar
+file.reference.core-3.3.0.jar-1=jars/core-3.3.0.jar
+file.reference.fontawesomefx-8.9.jar=jars/fontawesomefx-8.9.jar
+file.reference.fontawesomefx-commons-8.15.jar=jars/fontawesomefx-commons-8.15.jar
+file.reference.fontawesomefx-commons-9.1.2.jar=jars/fontawesomefx-commons-9.1.2.jar
+file.reference.fontawesomefx-controls-8.15.jar=jars/fontawesomefx-controls-8.15.jar
+file.reference.fontawesomefx-emojione-2.2.7-2.jar=jars/fontawesomefx-emojione-2.2.7-2.jar
+file.reference.fontawesomefx-fontawesome-4.7.0-5.jar=jars/fontawesomefx-fontawesome-4.7.0-5.jar
+file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar=jars/fontawesomefx-fontawesome-4.7.0-9.1.2.jar
+file.reference.fontawesomefx-glyphsbrowser-1.3.0.jar=jars/fontawesomefx-glyphsbrowser-1.3.0.jar
+file.reference.fontawesomefx-icons525-3.0.0-4.jar=jars/fontawesomefx-icons525-3.0.0-4.jar
+file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar=jars/fontawesomefx-materialdesignfont-1.7.22-4.jar
+file.reference.fontawesomefx-materialicons-2.2.0-5.jar=jars/fontawesomefx-materialicons-2.2.0-5.jar
+file.reference.fontawesomefx-octicons-4.3.0-5.jar=jars/fontawesomefx-octicons-4.3.0-5.jar
+file.reference.fontawesomefx-weathericons-2.0.10-5.jar=jars/fontawesomefx-weathericons-2.0.10-5.jar
+file.reference.gson-2.10.1.jar-1=jars/gson-2.10.1.jar
+file.reference.itextpdf-5.5.13.3.jar-1=jars/itextpdf-5.5.13.3.jar
+file.reference.javafx-swt.jar=jars/javafx-swt.jar
+file.reference.javafx.base.jar=jars/javafx.base.jar
+file.reference.javafx.controls.jar=jars/javafx.controls.jar
+file.reference.javafx.fxml.jar=jars/javafx.fxml.jar
+file.reference.javafx.graphics.jar=jars/javafx.graphics.jar
+file.reference.javafx.media.jar=jars/javafx.media.jar
+file.reference.javafx.swing.jar=jars/javafx.swing.jar
+file.reference.javafx.web.jar=jars/javafx.web.jar
+file.reference.javase-3.3.0.jar-1=jars/javase-3.3.0.jar
+file.reference.javax.mail.jar=jars/javax.mail.jar
+file.reference.jfoenix-8.0.10.jar=jars/jfoenix-8.0.10.jar
+file.reference.jfoenix-9.0.10.jar=jars/jfoenix-9.0.10.jar
+file.reference.mysql-connector-j-8.0.32.jar-2=jars/mysql-connector-j-8.0.32.jar
+file.reference.stripe-java-22.10.0.jar-1=jars/stripe-java-22.10.0.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.32.jar}:\
-    ${file.reference.mysql-connector-j-8.0.32.jar-1}:\
-    ${file.reference.stripe-java-22.10.0.jar}:\
-    ${file.reference.checkout-sdk-2.0.0.jar}:\
-    ${file.reference.paypalhttp-2.0.0.jar}:\
-    ${file.reference.gson-2.9.0.jar}:\
-    ${file.reference.javase-3.3.0.jar}:\
-    ${file.reference.core-3.3.0.jar}:\
-    ${file.reference.itextpdf-5.5.13.3.jar}:\
-    ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.controlsfx-11.1.2.jar}:\
+    ${file.reference.controlsfx-11.1.2.jar}:\
+    ${file.reference.core-3.3.0.jar-1}:\
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.fontawesomefx-commons-8.15.jar}:\
+    ${file.reference.fontawesomefx-commons-9.1.2.jar}:\
+    ${file.reference.fontawesomefx-controls-8.15.jar}:\
+    ${file.reference.fontawesomefx-emojione-2.2.7-2.jar}:\
+    ${file.reference.fontawesomefx-fontawesome-4.7.0-5.jar}:\
+    ${file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar}:\
+    ${file.reference.fontawesomefx-glyphsbrowser-1.3.0.jar}:\
+    ${file.reference.fontawesomefx-icons525-3.0.0-4.jar}:\
+    ${file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar}:\
+    ${file.reference.fontawesomefx-materialicons-2.2.0-5.jar}:\
+    ${file.reference.fontawesomefx-octicons-4.3.0-5.jar}:\
+    ${file.reference.fontawesomefx-weathericons-2.0.10-5.jar}:\
+    ${file.reference.gson-2.10.1.jar-1}:\
+    ${file.reference.itextpdf-5.5.13.3.jar-1}:\
+    ${file.reference.javafx-swt.jar}:\
+    ${file.reference.javafx.base.jar}:\
+    ${file.reference.javafx.controls.jar}:\
+    ${file.reference.javafx.fxml.jar}:\
+    ${file.reference.javafx.graphics.jar}:\
+    ${file.reference.javafx.media.jar}:\
+    ${file.reference.javafx.swing.jar}:\
+    ${file.reference.javafx.web.jar}:\
+    ${file.reference.javase-3.3.0.jar-1}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.jfoenix-9.0.10.jar}:\
+    ${file.reference.mysql-connector-j-8.0.32.jar-2}:\
+    ${file.reference.stripe-java-22.10.0.jar-1}:\
     ${file.reference.core-3.3.0.jar-1}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
@@ -153,7 +168,24 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Attempt2
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=pi_desktop_test.PI_Desktop_Test
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -164,7 +196,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=--module-path "C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\javafx-sdk-19.0.2.1\\lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
@@ -173,6 +205,5 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-source.reference.gson-2.9.0.jar=C:\\Users\\WHITE SHARK\\Desktop\\Studies\\3A\\Sem 2\\PIDev\\Resources\\Jars\\gson-2.9.0.jar
 src.dir=src
 test.src.dir=test
