--- a/Attempt2/nbproject/project.properties
+++ b/Attempt2/nbproject/project.properties
@@ -35,6 +35,9 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Attempt2
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.4.jar=jars\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.19.jar=jars\\commons-compress-1.19.jar
+file.reference.commons-math3-3.6.1.jar=jars\\commons-math3-3.6.1.jar
 file.reference.controlsfx-11.1.2.jar=jars/controlsfx-11.1.2.jar
 file.reference.core-3.3.0.jar-1=jars/core-3.3.0.jar
 file.reference.fontawesomefx-8.9.jar=jars/fontawesomefx-8.9.jar
@@ -65,7 +68,14 @@ file.reference.javax.mail.jar=jars/javax.mail.jar
 file.reference.jfoenix-8.0.10.jar=jars/jfoenix-8.0.10.jar
 file.reference.jfoenix-9.0.10.jar=jars/jfoenix-9.0.10.jar
 file.reference.mysql-connector-j-8.0.32.jar-2=jars/mysql-connector-j-8.0.32.jar
+file.reference.poi-4.1.2.jar=jars\\poi-4.1.2.jar
+file.reference.poi-examples-4.1.2.jar=jars\\poi-examples-4.1.2.jar
+file.reference.poi-excelant-4.1.2.jar=jars\\poi-excelant-4.1.2.jar
+file.reference.poi-ooxml-4.1.2.jar=jars\\poi-ooxml-4.1.2.jar
+file.reference.poi-ooxml-schemas-4.1.2.jar=jars\\poi-ooxml-schemas-4.1.2.jar
+file.reference.poi-scratchpad-4.1.2.jar=jars\\poi-scratchpad-4.1.2.jar
 file.reference.stripe-java-22.10.0.jar-1=jars/stripe-java-22.10.0.jar
+file.reference.xmlbeans-3.1.0.jar=jars\\xmlbeans-3.1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -132,7 +142,17 @@ javac.classpath=\
     ${file.reference.jfoenix-8.0.10.jar}:\
     ${file.reference.jfoenix-9.0.10.jar}:\
     ${file.reference.mysql-connector-j-8.0.32.jar-2}:\
-    ${file.reference.stripe-java-22.10.0.jar-1}
+    ${file.reference.stripe-java-22.10.0.jar-1}:\
+    ${file.reference.poi-4.1.2.jar}:\
+    ${file.reference.poi-examples-4.1.2.jar}:\
+    ${file.reference.poi-excelant-4.1.2.jar}:\
+    ${file.reference.poi-ooxml-4.1.2.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
+    ${file.reference.poi-scratchpad-4.1.2.jar}:\
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.19.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -193,10 +213,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "C:\\Users\\Theto\\Desktop\\PIDEVJAVA\\javafx-sdk-19.0.2.1\\lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
