--- a/Attempt2/nbproject/project.properties
+++ b/Attempt2/nbproject/project.properties
@@ -38,8 +38,9 @@ excludes=
 file.reference.commons-collections4-4.4.jar=jars\\commons-collections4-4.4.jar
 file.reference.commons-compress-1.19.jar=jars\\commons-compress-1.19.jar
 file.reference.commons-math3-3.6.1.jar=jars\\commons-math3-3.6.1.jar
-file.reference.controlsfx-11.1.2.jar=jars/controlsfx-11.1.2.jar
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\Monta\\Desktop\\jars\\JAR\\fichier jar\\notific\\controlsfx-8.40.11.jar
 file.reference.core-3.3.0.jar-1=jars/core-3.3.0.jar
+file.reference.core-3.5.1.jar=C:\\Users\\Monta\\Desktop\\jars\\core-3.5.1.jar
 file.reference.fontawesomefx-8.9.jar=jars/fontawesomefx-8.9.jar
 file.reference.fontawesomefx-commons-8.15.jar=jars/fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-commons-9.1.2.jar=jars/fontawesomefx-commons-9.1.2.jar
@@ -63,6 +64,7 @@ file.reference.javafx.graphics.jar=jars/javafx.graphics.jar
 file.reference.javafx.media.jar=jars/javafx.media.jar
 file.reference.javafx.swing.jar=jars/javafx.swing.jar
 file.reference.javafx.web.jar=jars/javafx.web.jar
+file.reference.javase-3.0.0.jar=C:\\Users\\Monta\\Desktop\\jars\\JAR\\fichier jar\\javase-3.0.0.jar
 file.reference.javase-3.3.0.jar-1=jars/javase-3.3.0.jar
 file.reference.javax.mail.jar=jars/javax.mail.jar
 file.reference.jfoenix-8.0.10.jar=jars/jfoenix-8.0.10.jar
@@ -74,6 +76,8 @@ file.reference.poi-excelant-4.1.2.jar=jars\\poi-excelant-4.1.2.jar
 file.reference.poi-ooxml-4.1.2.jar=jars\\poi-ooxml-4.1.2.jar
 file.reference.poi-ooxml-schemas-4.1.2.jar=jars\\poi-ooxml-schemas-4.1.2.jar
 file.reference.poi-scratchpad-4.1.2.jar=jars\\poi-scratchpad-4.1.2.jar
+file.reference.qrgen-1.2.jar=C:\\Users\\Monta\\Desktop\\jars\\JAR\\fichier jar\\qrgen-1.2.jar
+file.reference.qrgen-1.4.jar=C:\\Users\\Monta\\Desktop\\jars\\JAR\\fichier jar\\qrgen-1.4.jar
 file.reference.stripe-java-22.10.0.jar-1=jars/stripe-java-22.10.0.jar
 file.reference.xmlbeans-3.1.0.jar=jars\\xmlbeans-3.1.0.jar
 includes=**
@@ -81,8 +85,6 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.controlsfx-11.1.2.jar}:\
-    ${file.reference.controlsfx-11.1.2.jar}:\
     ${file.reference.core-3.3.0.jar-1}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
@@ -152,7 +154,12 @@ javac.classpath=\
     ${file.reference.xmlbeans-3.1.0.jar}:\
     ${file.reference.commons-collections4-4.4.jar}:\
     ${file.reference.commons-compress-1.19.jar}:\
-    ${file.reference.commons-math3-3.6.1.jar}
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.javase-3.0.0.jar}:\
+    ${file.reference.qrgen-1.2.jar}:\
+    ${file.reference.qrgen-1.4.jar}:\
+    ${file.reference.core-3.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
